<resources>
    <string name="app_name">Bundle Demo</string>

    <!-- main -->
        <string name="main_title_text">緊急聯絡人</string>
        <string name="main_editText_username_hint">請輸入使用者名稱。</string>
        <string name="main_editText_phone_hint">請輸入電話號碼。</string>
        <string name="main_editText_mobile_hint">請輸入手機號碼。</string>
        <string name="main_editText_email_hint">請輸入電子郵件。</string>
        <string name="main_submit_text">輸出</string>

    <!-- bundle -->
        <string name="bundle_title_text">Bundle 資料</string>
        <string name="bundle_value_is_null">Bundle 過來的資料是 Null</string>

    <!-- toast -->
        <string name="toast_value_is_null">您輸入的內容似乎不符規範。</string>

    <!-- edittext -->
        <string name="edittext_error_message">您輸入的內容有誤！</string>

</resources>
