<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bootstrap_gray_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kantai.bundledemo.MainActivity">

    <com.beardedhen.androidbootstrap.BootstrapWell
        android:id="@+id/bootstrapWell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="@color/bootstrap_gray"
        app:bootstrapSize="lg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_title_text"
            android:textColor="@color/bootstrap_brand_secondary_fill" />
    </com.beardedhen.androidbootstrap.BootstrapWell>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/bootstrapEditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bootstrapWell"
        android:layout_margin="8dp"
        android:backgroundTint="@color/bootstrap_gray_light"
        android:hint="@string/main_editText_username_hint"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:roundedCorners="true"
        android:inputType="text" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/bootstrapEditTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bootstrapEditTextUsername"
        android:layout_margin="8dp"
        android:backgroundTint="@color/bootstrap_gray_light"
        android:hint="@string/main_editText_phone_hint"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:roundedCorners="true"
        android:inputType="phone" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/bootstrapEditTextMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bootstrapEditTextPhone"
        android:layout_margin="8dp"
        android:backgroundTint="@color/bootstrap_gray_light"
        android:hint="@string/main_editText_mobile_hint"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:roundedCorners="true"
        android:inputType="phone" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/bootstrapEditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bootstrapEditTextMobile"
        android:layout_margin="8dp"
        android:backgroundTint="@color/bootstrap_gray_light"
        android:hint="@string/main_editText_email_hint"
        android:inputType="textEmailAddress"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="mainButtonClick"
        android:text="@string/main_submit_text"
        app:bootstrapBrand="regular"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false" />

</RelativeLayout>
